feat(migration/java-21): Java 21, migrate to Jakarta EE 10, update beans.xml, and add new API